--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </section>
       <section class="features">
-        <div class="container">
+        <div class="container features-container">
           <h2 class="visually-hidden">x</h2>
           <ul class="features-list">
             <li class="features-item">
