--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
       </section>
       <section class="features">
-        <div class="container features-container">
+        <div class="container features-list">
           <h2 class="visually-hidden">x</h2>
           <ul class="features-list">
             <li class="features-item">
@@ -107,8 +107,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card-titei-list">Mark Guerrero</h3>
-              <p class="team-card-text">Product Designer</p>
+              <div class="team-card-list-container">
+                <h3 class="team-card-titei-list">Mark Guerrero</h3>
+                <p class="team-card-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-card-item">
               <img
@@ -117,8 +119,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card-titei-list">Tom Ford</h3>
-              <p class="team-card-text">Frontend Developer</p>
+              <div class="team-card-list-container">
+                <h3 class="team-card-titei-list">Tom Ford</h3>
+                <p class="team-card-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-card-item">
               <img
@@ -127,8 +131,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card-titei-list">Camila Garcia</h3>
-              <p class="team-card-text">Marketing</p>
+              <div class="team-card-list-container">
+                <h3 class="team-card-titei-list">Camila Garcia</h3>
+                <p class="team-card-text">Marketing</p>
+              </div>
             </li>
             <li class="team-card-item">
               <img
@@ -137,8 +143,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-card-titei-list">Daniel Wilson</h3>
-              <p class="team-card-text">UI Designer</p>
+              <div class="team-card-list-container">
+                <h3 class="team-card-titei-list">Daniel Wilson</h3>
+                <p class="team-card-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
