--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-container">
         <a class="footer-logo" href="./index.html"
           >Web<span class="footer-logo-span">Studio</span></a
         >
