--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container team-card-container">
           <h2 class="team-card-titel">Our Team</h2>
           <ul class="team-card-list">
-            <li class="team-card-item">
+            <li class="team-card-item team-card-item-f">
               <img
                 src="./images/img-4.jpg"
                 alt="Mark Guerrero"
@@ -152,7 +152,7 @@
         </div>
       </section>
       <section class="portfolio">
-        <div class="container">
+        <div class="container portfolio-container">
           <h2 class="portfolio-titel">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
