--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="container team-card-container">
           <h2 class="team-card-titel">Our Team</h2>
           <ul class="team-card-list">
-            <li class="team-card-item team-card-item-f">
+            <li class="team-card-item">
               <img
                 src="./images/img-4.jpg"
                 alt="Mark Guerrero"
